--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <link rel="stylesheet" href="resources/css/style.css">
 <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1 class="haeder--main">Discover hidden places in the world around you</h1>
     <p><a href="" >Download Excursion (Coming soon!)</a></p>
-    
+
+
 </body>
 </html>
