--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1 class="haeder--main">Discover hidden places in the world around you</h1>
     <p><a href="" >Download Excursion (Coming soon!)</a></p>
+    <img src="resources/images/phone.png" alt="iphone pic">
+    <h2 class="guide">Your personal travel guide</h2>
+    <p class="guide-info">Excursion remembers places you like, and recommands new points of interest around you.</p>
 
 
 </body>
