--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 <body>
     <h1 class="haeder--main">Discover hidden places in the world around you</h1>
     <p><a href="" >Download Excursion (Coming soon!)</a></p>
-    <img src="resources/images/phone.png" alt="iphone pic">
+    <video autoplay loop>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
     <h2 class="guide">Your personal travel guide</h2>
     <p class="guide-info">Excursion remembers places you like, and recommands new points of interest around you.</p>
-
+    <img src="resources/images/camp.webp" alt="camp pic"><br>
+    <img src="resources/images/phone.png" alt="iphone pic">
+    <h2 class="guide">Coming Soon for iPhone and Android</h2>
+    <p><a href="" >Download Excursion (Coming soon!)</a></p>
+    <footer>&copy;Excursion</footer>
 
 </body>
 </html>
