--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2 class="guide">Your personal travel guide</h2>
     <p class="guide-info">Excursion remembers places you like, and recommands new points of interest around you.</p>
     <img src="resources/images/camp.webp" alt="camp pic"><br>
-    <img src="resources/images/phone.png" alt="iphone pic">
+    <img class="iphone" src="resources/images/phone.png" alt="iphone pic">
     <h2 class="guide">Coming Soon for iPhone and Android</h2>
     <p><a href="" >Download Excursion (Coming soon!)</a></p>
     <footer>&copy;Excursion</footer>
